# federated-graphql

./: README.md  schema.graphql  workspace.code-workspace
.github/workflows/: pipeline.yml
deployment/apps/: container_apps.bicep  main.bicep  upload_docker_images.sh  upload_graphql_schema.sh
deployment/infra/: apim.bicep  container_apps_env.bicep  main.bicep
src/: Makefile  docker-compose.yml
src/account/: app.py
src/accounts/: app.py
src/catalogue/: app.py  pyproject.toml
src/companies/: Dockerfile  app.py  models.py  repo.py  schemas.py
src/enterprise/: app.py  pyproject.toml
src/founders/: Dockerfile  app.py  models.py  pyproject.toml  repo.py  schemas.py
src/gateway/: server.ts
src/payments/: app.py  pyproject.toml
src/products/: pyproject.toml
src/products/products/: main.py
